<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">GB2S</string>
    <string name="action_settings">Settings</string>
    <string name="title">Group of Biometrics, Biosignal and Security</string>
    <string name="title_activity_about_us">About us</string>
    <string name="about_us">About us</string>
    <string name="people">People</string>
    <string name="website">Website</string>
    <string name="twitter">Twitter</string>
    <string name="title_activity_people">People</string>
    <string name="hello_world">Hello world!</string>
    <string name="intro_1">     The Group of Biometrics, Biosignals and Security (GB2S) appeared in 1998 in Escuela Técnica Superior de Ingenieros de Telecomunicación (ETSIT), from Polytechnical University of Madrid (UPM). At present, GB2S is located within Centro de Domótica Integral (CeDInt), which belongs also to UPM. Before 2010, GB2S was known as Grupo de Biometría y Tratamiento Numérico de la Información (GBTNI).</string>
    <string name="intro_2">     Our Research Lines cover a diverse number of topics not only in Biometrics and Cryptography, but also in topics related to Biosignals, like Stress Detection or biometric identification by means of Human Odour. These lines have result in a great number of Publications and Patents applications.</string>
    <string name="intro_3">     Furthermore, the GB2S owns several multimodal and monomodal biometric Databases gathering different biometric characteristics (Iris, Face, Gait, Hand or Gestures), publicly available for research purposes.</string>
    <string name="title_activity_carmen">Carmen Sánchez Ávila</string>
    <string name="title_activity_enrique">Enrique Mayo Romero</string>
    <string name="title_activity_daniel">Daniel de Santos Sierra</string>
    <string name="title_activity_vicente">Vicente Jara Vera</string>
    <string name="title_activity_gonzalo">Gonzalo Bailador</string>
    <string name="title_activity_miguel">Miguel Arriaga Gómez</string>
    <string name="title_activity_ana">Ana Bermejo</string>
    <string name="title_activity_javier">Javier Guerra</string>
    <string name="title_activity_rodrigo">Rodrigo Ros</string>
    <string name="title_activity_ignacio">Ignacio de Mendizábal</string>
    <string name="title_activity_idola">Idola Meno</string>

</resources>
