<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gb2s"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Portada" >

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true" >

        <Button
            android:id="@+id/button3"
            android:layout_width="0dp"
            android:layout_height="75dp"
            android:layout_weight="1"
            android:onClick="goWebsite"
            android:text="@string/website"
            android:textSize="25sp"
            android:textStyle="bold" 
            android:textColor="#FFEBCD"
            android:background="@drawable/rectangulo"
            />

        <Button
            android:id="@+id/button4"
            android:layout_width="0dp"
            android:layout_height="75dp"
            android:layout_weight="1"
            android:onClick="goTwitter"
            android:text="@string/twitter"
            android:textSize="25sp"
            android:textStyle="bold"
            android:textColor="#FFEBCD" 
            android:background="@drawable/rectangulo"
            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true" >

        <Button
            android:id="@+id/button1"
            android:layout_width="0dp"
            android:layout_height="75dp"
            android:layout_weight="1"
            android:onClick="goAboutUs"
            android:text="@string/about_us"
            android:textSize="25sp"
            android:textStyle="bold" 
            android:textColor="#FFEBCD"
            android:background="@drawable/rectangulo"
            />

        <Button
            android:id="@+id/button2"
            android:layout_width="0dp"
            android:layout_height="75dp"
            android:layout_weight="1"
            android:onClick="goPeople"
            android:text="@string/people"
            android:textSize="25sp"
            android:textStyle="bold"
            android:textColor="#FFEBCD"
            android:background="@drawable/rectangulo"
            />
        
    </LinearLayout>

</RelativeLayout>